# space-debris-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/generations/: Feature Importance Bar Chart.py  Multi-class ROC Curve.py  Orbital Data Distribution.py  generate_figures.py  generate_flowchart.py
assets/models/earth/: earth.mtl
backend/: __init__.py  api.py  build_dataset.py  check_dataset.py  collision_checker.py  config.py  main.py  nasa_client.py  orbit_plotter.py  orbit_predictor.py  test_utils_temp.py  tle_fetcher.py  train_model.py  utils.py  visualizer.py
backend/scripts/: health_check.py  run_health.ps1  test_nasa_client.py  test_tle_fetch.py  verify_cleanup.py
data/: latest_tle.txt  tle_features_all.csv  tle_features_labeled.csv
data/famous_tles/: famous.txt
data/tle/active/: 20250924_090111.tle  20251008_084023.tle  20251009_133728.tle  20251012_075232.tle  20251012_123410.tle  20251018_142615.tle  20251020_080337.tle  20251031_113759.tle  20251108_044142.tle  20251108_080036.tle  20251126_131001.tle  20260124_125806.tle  20260214_055044.tle  20260223_143525.tle  20260224_111023.tle  20260325_100754.tle  20260325_142013.tle  20260326_083947.tle  20260326_124922.tle  20260327_061327.tle  20260327_091402.tle  20260327_171144.tle  20260328_082023.tle  20260401_055634.tle  20260402_044143.tle  20260402_092820.tle  20260403_160529.tle  20260404_050746.tle  (+7 more)
data_analysis/: generate_ml_plots.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend-three/: index.html  package-lock.json  package.json
frontend-three/src/: App.jsx  index.css
frontend/src/: App.jsx  main.jsx
ml_models/: object_classifier.joblib
models/: iss.mtl
tests/: generate_flowchart.py  sample.tle  test_orbit_predictor.py  test_time_steps.py
tools/: fix_backend_imports.py
(+43 files in other folders)
