[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orcas"
version = "1.0.0"
description = "Machine-Learning-Enhanced Space Debris Tracking System with 2D/3D Visualization, Collision Alerts, and Satellite Analysis Tools."
authors = [
    { name = "Fenil Modi" },
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "numpy==2.3.5",
    "scipy==1.16.3",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "imbalanced-learn==0.14.0",
    "joblib==1.5.2",
    "threadpoolctl==3.6.0",
    "skyfield==1.53",
    "jplephem==2.23",
    "sgp4==2.25",
    "Cartopy==0.25.0",
    "pyproj==3.7.2",
    "shapely==2.1.2",
    "pyshp==3.0.2.post1",
    "pyvista==0.46.4",
    "vtk==9.5.2",
    "trimesh==4.10.0",
    "matplotlib==3.10.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "kiwisolver==1.4.9",
    "fonttools==4.60.1",
    "pillow==12.0.0",
    "requests==2.32.5",
    "pooch==1.8.2",
    "scooby==0.11.0",
    "typing_extensions==4.15.0",
    "python-dateutil==2.9.0.post0",
    "tzdata==2025.2",
    "packaging==25.0",
    "imageio==2.37.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/fenilmodi823/orcas"
Documentation = "https://github.com/fenilmodi823/orcas"
Source = "https://github.com/fenilmodi823/orcas"
Issues = "https://github.com/fenilmodi823/orcas/issues"

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-data]
backend = [
    "models/*.obj",
    "assets/textures/*.png",
    "assets/textures/*.jpg",
]